force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Child_Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Child_Scheduled_Build__c</fullName>
    <formula>agf__Child_Work__r.agf__Scheduled_Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Scheduled Build</label>
    <type>Text</type>
</CustomField>