force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Child_Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Child_Scrum_Team__c</fullName>
    <formula>agf__Child_Work__r.agf__Scrum_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Scrum Team</label>
    <type>Text</type>
</CustomField>