force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Child_Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__Child_Subject__c</fullName>
    <formula>agf__Child_Work__r.agf__Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Subject</label>
    <type>Text</type>
</CustomField>