force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Child_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Child_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Parent Work Records</relationshipLabel>
    <relationshipName>Child_Work</relationshipName>
    <type>Lookup</type>
</CustomField>