force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Duplicate__c.field-meta.xml
<CustomField>
    <fullName>agf__Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is child a duplicate of parent?</label>
    <type>Checkbox</type>
</CustomField>