force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Parent_Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Scheduled_Build__c</fullName>
    <formula>agf__Parent_Work__r.agf__Scheduled_Build__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Scheduled Build</label>
    <type>Text</type>
</CustomField>