force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Parent_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Child Work Records</relationshipLabel>
    <relationshipName>Parent_Work</relationshipName>
    <type>Lookup</type>
</CustomField>