force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Parent_Work_Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Work_Closed__c</fullName>
    <formula>agf__Parent_Work__r.agf__Closed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The closed flag for the parent work record. Will be 0 or 1 depending on the status of the work record.</inlineHelpText>
    <label>Parent Work Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>