force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Parent_Work__c/fields/agf__Parent_Work_Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Work_Subject__c</fullName>
    <formula>agf__Parent_Work__r.agf__Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Work Subject</label>
    <type>Text</type>
</CustomField>